--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   site-url: https://shashankshekhar.me/
   favicon: favicon.ico
   # enhanced appearance when someone links the site
+  open-graph: true
   twitter-card:
     creator: "@ShashankData"
     card-style: summary_large_image
