--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -5,4 +5,8 @@
 freeze: true
 
 # Enable banner style title blocks
-title-block-banner: true
+title-block-banner: false
+
+comments: 
+  utterances: 
+    repo:  shashank2806/myblog
